# esp-idf-smtp-camera

./: CMakeLists.txt  Makefile  README.md  getpem.sh  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  cmd.h  component.mk  gmail_root_cert.pem  main.c  mqtt_sub.c  smtp.c  smtp_client.c  tcp_server.c
